src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_one_variant.snap
---
source: src/annotate/seqvars/csq.rs
expression: "res[0]"
---
allele:
  Alt:
    alternative: C
consequences:
  - MissenseVariant
putative_impact: Moderate
gene_symbol: BRCA1
gene_id: "HGNC:1100"
feature_type:
  SoTerm:
    term: Transcript
feature_id: NM_007294.4
feature_biotype: Coding
rank:
  ord: 23
  total: 23
hgvs_t: c.5586C>G
hgvs_p: p.H1862Q
tx_pos:
  ord: 5699
  total: 7088
cds_pos:
  ord: 5586
  total: 5592
protein_pos:
  ord: 1862
  total: 1864
distance: -1390
messages: ~

