src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_one_variant@17-41196310-G-C.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: C
  consequences:
    - downstream_gene_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
    - mane_select
  rank: ~
  hgvs_t: ~
  hgvs_p: ~
  tx_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: -2
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - downstream_gene_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007297.4
  feature_biotype:
    - coding
  rank: ~
  hgvs_t: ~
  hgvs_p: ~
  tx_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: -2
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - downstream_gene_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007298.3
  feature_biotype:
    - coding
  rank: ~
  hgvs_t: ~
  hgvs_p: ~
  tx_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: -2
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - downstream_gene_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007299.4
  feature_biotype:
    - coding
  rank: ~
  hgvs_t: ~
  hgvs_p: ~
  tx_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: -2
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - downstream_gene_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007300.4
  feature_biotype:
    - coding
  rank: ~
  hgvs_t: ~
  hgvs_p: ~
  tx_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: -2
  strand: -1
  messages: ~
