src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_one_variant@17-41196312-G-C.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: C
  consequences:
    - 3_prime_UTR_variant
  putative_impact: MODIFIER
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype: Coding
  rank:
    ord: 23
    total: 23
  hgvs_t: c.*1383A>G
  hgvs_p: p.?
  tx_pos:
    ord: 7088
    total: 7088
  cds_pos:
    ord: 1383
    total: 5592
  protein_pos: ~
  distance: 0
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - 3_prime_UTR_variant
  putative_impact: MODIFIER
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007297.4
  feature_biotype: Coding
  rank:
    ord: 22
    total: 22
  hgvs_t: c.*1383A>G
  hgvs_p: p.?
  tx_pos:
    ord: 7028
    total: 7028
  cds_pos:
    ord: 1383
    total: 5451
  protein_pos: ~
  distance: 0
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - 3_prime_UTR_variant
  putative_impact: MODIFIER
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007299.4
  feature_biotype: Coding
  rank:
    ord: 22
    total: 22
  hgvs_t: c.*1489A>G
  hgvs_p: p.?
  tx_pos:
    ord: 3696
    total: 3696
  cds_pos:
    ord: 1489
    total: 2100
  protein_pos: ~
  distance: 0
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - 3_prime_UTR_variant
  putative_impact: MODIFIER
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007300.4
  feature_biotype: Coding
  rank:
    ord: 24
    total: 24
  hgvs_t: c.*1383A>G
  hgvs_p: p.?
  tx_pos:
    ord: 7151
    total: 7151
  cds_pos:
    ord: 1383
    total: 5655
  protein_pos: ~
  distance: 0
  messages: ~

