src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_one_variant@17-41197701-G-C.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: C
  consequences:
    - missense_variant
  putative_impact: MODERATE
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - Coding
    - ManeSelect
  rank:
    ord: 23
    total: 23
  hgvs_t: c.5586C>G
  hgvs_p: p.H1862Q
  tx_pos:
    ord: 5699
    total: 7088
  cds_pos:
    ord: 5586
    total: 5592
  protein_pos:
    ord: 1862
    total: 1864
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - missense_variant
  putative_impact: MODERATE
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007297.4
  feature_biotype:
    - Coding
  rank:
    ord: 22
    total: 22
  hgvs_t: c.5445C>G
  hgvs_p: p.H1815Q
  tx_pos:
    ord: 5639
    total: 7028
  cds_pos:
    ord: 5445
    total: 5451
  protein_pos:
    ord: 1815
    total: 1817
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - missense_variant
  putative_impact: MODERATE
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007298.3
  feature_biotype:
    - Coding
  rank:
    ord: 22
    total: 22
  hgvs_t: c.2274C>G
  hgvs_p: p.H758Q
  tx_pos:
    ord: 2293
    total: 3682
  cds_pos:
    ord: 2274
    total: 2280
  protein_pos:
    ord: 758
    total: 760
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - 3_prime_UTR_variant
  putative_impact: MODIFIER
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007299.4
  feature_biotype:
    - Coding
  rank:
    ord: 22
    total: 22
  hgvs_t: c.*100C>G
  hgvs_p: p.?
  tx_pos:
    ord: 2307
    total: 3696
  cds_pos:
    ord: 100
    total: 2100
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - missense_variant
  putative_impact: MODERATE
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007300.4
  feature_biotype:
    - Coding
  rank:
    ord: 24
    total: 24
  hgvs_t: c.5649C>G
  hgvs_p: p.H1883Q
  tx_pos:
    ord: 5762
    total: 7151
  cds_pos:
    ord: 5649
    total: 5655
  protein_pos:
    ord: 1883
    total: 1885
  distance: 0
  strand: -1
  messages: ~
