src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_one_variant@17-41197818-G-C.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_region_variant
    - synonymous_variant
  putative_impact: low
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
    - mane_select
  rank:
    ord: 23
    total: 23
  hgvs_t: c.5469A>G
  hgvs_p: p.Ala1823=
  tx_pos:
    ord: 5582
    total: 7088
  cds_pos:
    ord: 5469
    total: 5592
  protein_pos:
    ord: 1823
    total: 1864
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_region_variant
    - synonymous_variant
  putative_impact: low
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007297.4
  feature_biotype:
    - coding
  rank:
    ord: 22
    total: 22
  hgvs_t: c.5328A>G
  hgvs_p: p.Ala1776=
  tx_pos:
    ord: 5522
    total: 7028
  cds_pos:
    ord: 5328
    total: 5451
  protein_pos:
    ord: 1776
    total: 1817
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_region_variant
    - synonymous_variant
  putative_impact: low
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007298.3
  feature_biotype:
    - coding
  rank:
    ord: 22
    total: 22
  hgvs_t: c.2157A>G
  hgvs_p: p.Ala719=
  tx_pos:
    ord: 2176
    total: 3682
  cds_pos:
    ord: 2157
    total: 2280
  protein_pos:
    ord: 719
    total: 760
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - missense_variant
    - splice_region_variant
  putative_impact: moderate
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007299.4
  feature_biotype:
    - coding
  rank:
    ord: 22
    total: 22
  hgvs_t: c.2083A>G
  hgvs_p: p.Asn695Asp
  tx_pos:
    ord: 2190
    total: 3696
  cds_pos:
    ord: 2083
    total: 2100
  protein_pos:
    ord: 695
    total: 700
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_region_variant
    - synonymous_variant
  putative_impact: low
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007300.4
  feature_biotype:
    - coding
  rank:
    ord: 24
    total: 24
  hgvs_t: c.5532A>G
  hgvs_p: p.Ala1844=
  tx_pos:
    ord: 5645
    total: 7151
  cds_pos:
    ord: 5532
    total: 5655
  protein_pos:
    ord: 1844
    total: 1885
  distance: 0
  strand: -1
  messages: ~
