src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_one_variant@17-41197819-G-C.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: C
  consequences:
    - missense_variant
    - splice_region_variant
  putative_impact: moderate
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
    - mane_select
  rank:
    ord: 23
    total: 23
  hgvs_g: g.41197819G>C
  hgvs_c: c.5468C>G
  hgvs_p: p.Ala1823Gly
  cdna_pos:
    ord: 5581
    total: 7088
  cds_pos:
    ord: 5468
    total: 5592
  protein_pos:
    ord: 1823
    total: 1864
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - missense_variant
    - splice_region_variant
  putative_impact: moderate
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007297.4
  feature_biotype:
    - coding
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41197819G>C
  hgvs_c: c.5327C>G
  hgvs_p: p.Ala1776Gly
  cdna_pos:
    ord: 5521
    total: 7028
  cds_pos:
    ord: 5327
    total: 5451
  protein_pos:
    ord: 1776
    total: 1817
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - missense_variant
    - splice_region_variant
  putative_impact: moderate
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007298.3
  feature_biotype:
    - coding
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41197819G>C
  hgvs_c: c.2156C>G
  hgvs_p: p.Ala719Gly
  cdna_pos:
    ord: 2175
    total: 3682
  cds_pos:
    ord: 2156
    total: 2280
  protein_pos:
    ord: 719
    total: 760
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - missense_variant
    - splice_region_variant
  putative_impact: moderate
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007299.4
  feature_biotype:
    - coding
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41197819G>C
  hgvs_c: c.2082C>G
  hgvs_p: p.Cys694Trp
  cdna_pos:
    ord: 2189
    total: 3696
  cds_pos:
    ord: 2082
    total: 2100
  protein_pos:
    ord: 694
    total: 700
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - missense_variant
    - splice_region_variant
  putative_impact: moderate
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007300.4
  feature_biotype:
    - coding
  rank:
    ord: 24
    total: 24
  hgvs_g: g.41197819G>C
  hgvs_c: c.5531C>G
  hgvs_p: p.Ala1844Gly
  cdna_pos:
    ord: 5644
    total: 7151
  cds_pos:
    ord: 5531
    total: 5655
  protein_pos:
    ord: 1844
    total: 1885
  distance: 0
  strand: -1
  messages: ~
