src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_one_variant@17-41197820-G-C.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_acceptor_variant
    - intron_variant
  putative_impact: high
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
    - mane_select
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41197820G>C
  hgvs_c: c.5468-1C>G
  hgvs_p: p.?
  cdna_pos:
    ord: 5581
    total: 7088
  cds_pos:
    ord: 5468
    total: 5592
  protein_pos: ~
  distance: 1
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_acceptor_variant
    - intron_variant
  putative_impact: high
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007297.4
  feature_biotype:
    - coding
  rank:
    ord: 21
    total: 21
  hgvs_g: g.41197820G>C
  hgvs_c: c.5327-1C>G
  hgvs_p: p.?
  cdna_pos:
    ord: 5521
    total: 7028
  cds_pos:
    ord: 5327
    total: 5451
  protein_pos: ~
  distance: 1
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_acceptor_variant
    - intron_variant
  putative_impact: high
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007298.3
  feature_biotype:
    - coding
  rank:
    ord: 21
    total: 21
  hgvs_g: g.41197820G>C
  hgvs_c: c.2156-1C>G
  hgvs_p: p.?
  cdna_pos:
    ord: 2175
    total: 3682
  cds_pos:
    ord: 2156
    total: 2280
  protein_pos: ~
  distance: 1
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_acceptor_variant
    - intron_variant
  putative_impact: high
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007299.4
  feature_biotype:
    - coding
  rank:
    ord: 21
    total: 21
  hgvs_g: g.41197820G>C
  hgvs_c: c.2082-1C>G
  hgvs_p: p.?
  cdna_pos:
    ord: 2189
    total: 3696
  cds_pos:
    ord: 2082
    total: 2100
  protein_pos: ~
  distance: 1
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_acceptor_variant
    - intron_variant
  putative_impact: high
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007300.4
  feature_biotype:
    - coding
  rank:
    ord: 23
    total: 23
  hgvs_g: g.41197820G>C
  hgvs_c: c.5531-1C>G
  hgvs_p: p.?
  cdna_pos:
    ord: 5644
    total: 7151
  cds_pos:
    ord: 5531
    total: 5655
  protein_pos: ~
  distance: 1
  strand: -1
  messages: ~
